<resources>
    <string name="app_name">Chatroom</string>
    <string name="main_activity_title">Chatroom</string>
    <string name="email_placeholder">email</string>
    <string name="password_placeholder">password</string>
    <string name="nickname_placeholder">nickname (only for sign up)</string>
    <string name="AUTOFILL_HINT_EMAIL_ADDRESS">emailAddress</string>
    <string name="AUTOFILL_HINT_EMAIL_PASSWORD">password</string>
    <string name="signIn_btn_text">Sign in</string>
    <string name="signUp_btn_text">Sign up</string>
    <string name="signOut_btn_text">Sign out</string>
    <string name="chatroom_btn_text">Open chatroom</string>
    <string name="scroll_view_title">Chat with</string>
    <string name="signed_in_as">Signed in as %s</string>
    <string name="chat_with_my_self">%s (you)</string>
    <string name="chat_with_all_users">Everyone</string>
    <string name="send_btn_text">Send</string>
    <string name="message_placeholder">Type a message</string>
</resources>